BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Rule_Definition_vod__c.object
<CustomObject>
    <description>This is a system object that holds the definition of logic rules and drives their functionality on the Veeva offline platforms.

Do not modify, load or delete data in this object.</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Rule is active in Salesforce.com</description>
        <inlineHelpText>Indicates if the Rule is active in Salesforce.com</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRC_vod__c</fullName>
        <description>Field holds a CRC hash of the rule definition to ensure no unintended process has modified the rule definition and that the general integrity of the rule definition is maintained.</description>
        <inlineHelpText>CRC</inlineHelpText>
        <label>CRC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Field_vod__c</fullName>
        <description>Field Name where Field-level error messages will appear.</description>
        <inlineHelpText>Field Name where Field-level error messages will appear.</inlineHelpText>
        <label>Display Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Condition_Formula_vod__c</fullName>
        <description>Rule formula</description>
        <inlineHelpText>Rule formula</inlineHelpText>
        <label>Error Condition Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Master_Message_vod__c</fullName>
        <description>Error message for rule.</description>
        <inlineHelpText>Error message for rule.</inlineHelpText>
        <label>Master Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_vod__c</fullName>
        <description>Object on which this validation rule resides.</description>
        <inlineHelpText>Object on which this validation rule resides.</inlineHelpText>
        <label>Object</label>
        <referenceTo>Rule_Object_Header_vod__c</referenceTo>
        <relationshipLabel>Rule Definitions</relationshipLabel>
        <relationshipName>Rule_Definition_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_vod__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supported_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Veeva found un-supported syntax in rule definition.</description>
        <inlineHelpText>Indicates if Veeva found un-supported syntax in rule definition.</inlineHelpText>
        <label>Supported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id for the record. Format is [OBJECT API NAME]::[RULE NAME]::[RecordType.Name]</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id for the record. Format is [RULE NAME]::[RecordType.Name]</inlineHelpText>
        <label>VExternal Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Rule Definition</label>
    <nameField>
        <label>Rule Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule Definitions</pluralLabel>
    <recordTypes>
        <fullName>SFDC_Lookup_Filter_Line_vod</fullName>
        <active>true</active>
        <description>System record type. Do not modify.</description>
        <label>SFDC_Lookup_Filter_Line_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>SFDC_Rule_vod</fullName>
        <active>true</active>
        <description>System record type. Do not modify.</description>
        <label>SFDC_Rule_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>